# snoiq-experiments

./: .gitignore  Decision_Sheet.md  Decision_Sheet_v2.md  Makefile  README.md  README_v2.md  Working_With_Copilot_Chat.md  docker-compose.yml  pixi.toml  pyproject.toml
.dvc/: config
data/golden/: mrms_qpe01h_pass2_crop.nc  uscrn_hourly_sample.txt
data/grids/: .gitignore  dummy.bin.dvc
docs/functional_spec/: sno_iq_functional_specification_CLEAN_v1.md
docs/sources/mrms/: mrms.md  pitfalls.txt  readme_mrms.txt
docs/sources/uscrn/: readme.txt  uscrn.md
notebooks/01-ingestion/: mrms.ipynb  mrms_playground.ipynb
src/ingestion/: mrms.py  uscrn.py
src/physics/: snow.py
tests/: conftest.py  test_ingestion_mrms.py  test_ingestions_uscrn.py
